2015-01-23  Jakub Jelinek  <jakub@redhat.com>

	PR driver/64737
	* gcc.c (print_configuration): Don't print a blank line at the end
	here...
	(run_attempt): ... but here unstead.

	PR middle-end/64734
	* omp-low.c (scan_sharing_clauses): Don't ignore
	OMP_CLAUSE_MAP_ZERO_BIAS_ARRAY_SECTION GOMP_MAP_POINTER clauses
	on target data/update constructs.

2015-01-23  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR target/50928
	* config/m32c/m32c.c (encode_pattern_1): Removed gcc_unreachable here.
	(DEBUG_RELOAD): Removed define.
	(m32c_limit_reload_class): Enable traces with if DEBUG0.
	(m32c_function_arg): Added a type cast.
	(m32c_legitimize_reload_address): Push A_REGS reload with PSImode.
	* config/m32c/addsub.md (addsi3_1): Specify the mode of all arguments.
	* config/m32c/bitops.md (andqi3_16): Likewise.
	* config/m32c/mov.md (m32c_immd_dbl_mov): Likewise.
	(push_a01_l): Likewise.

2015-01-23  David Malcolm  <dmalcolm@redhat.com>

	PR jit/64721
	* main.c (main): Construct toplev instances with init_signals=true.
	* toplev.c (general_init): Add param "init_signals", and use it to
	conditionalize the calls to signal and host_hooks.extra_signals.
	(toplev::toplev): Add param "init_signals".
	(toplev::main): When invoking general_init, pass m_init_signals
	to control whether signal-handlers are installed.
	* toplev.h (toplev::toplev): Add param "init_signals".
	(toplev::m_init_signals): New field.

2015-01-23  David Malcolm  <dmalcolm@redhat.com>

	PR jit/64722
	* emit-rtl.c (init_emit_regs): Set pic_offset_table_rtx to
	NULL_RTX before testing PIC_OFFSET_TABLE_REGNUM, since the
	latter may be affected by the former (e.g. on i686).

2015-01-23  Martin Liska  <mliska@suse.cz>

	* tree.h (tree_vec_elt_check): Workaround -Wstrict-overflow
	false positive during profiledbootstrap.

2015-01-23  Tom de Vries  <tom@codesourcery.com>

	PR libgomp/64672
	* lto-opts.c (lto_write_options): Output non-explicit conservative
	-fno-openacc.